--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,9 @@
+:root {
+  --card-section-info-bg-color: #f9fadf;
+  --main-text-color: #73a6b1;
+  --main-button-bg-color: #7ae5fd;
+}
+
 .main-header {
   display: flex;
   padding: 2rem 3rem 2rem 3rem;
@@ -7,7 +13,7 @@
 }
 
 .header-nav-button {
-  background-color: aqua;
+  background-color: var(--main-button-bg-color);
 }
 
 .header-icon-wrapper {
@@ -53,12 +59,12 @@
   border-radius: 87px;
   opacity: 0px;
   border: 0;
-  font-family: Montserrat;
   font-size: 18px;
   font-weight: 400;
   line-height: 17.44px;
   text-align: center;
   text-transform: uppercase;
+  font-family: Montserrat;
 }
 .bg-image-article-absolute {
   position: absolute;
@@ -72,7 +78,6 @@
   gap: 1.5rem;
 }
 .title-h1 {
-  font-family: Montserrat;
   font-size: 63.07px;
   font-weight: 800;
   line-height: 70px;
@@ -81,7 +86,6 @@
   /* text-wrap: wrap; */
 }
 .paragraph-text {
-  font-family: Montserrat;
   font-size: 27px;
   font-weight: 400;
   line-height: 24px;
@@ -90,13 +94,13 @@
 .sub-title-section {
   display: inline-flex;
   width: 100%;
-		flex-direction: column;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-		gap: 1rem;
+  gap: 1rem;
+  padding-bottom: 10rem;
 }
 .title-h2 {
-  font-family: Montserrat;
   font-size: 60px;
   font-weight: 400;
   line-height: 72px;
@@ -117,13 +121,12 @@
 }
 .paragraph-sub-text {
   font-size: 20px;
-  font-family: Montserrat;
   font-size: 20px;
   font-weight: 400;
   line-height: 24px;
 }
 .marin-text-color {
-  color: #73a6b1;
+  color: var(--main-text-color);
 }
 .card-section {
   display: flex;
@@ -142,7 +145,6 @@
   border-radius: 10px;
 }
 .card-title {
-  font-family: Montserrat;
   font-size: 46px;
   font-weight: 400;
   line-height: 55.2px;
@@ -177,65 +179,166 @@
   height: 567px;
 }
 .card-image-bg-children {
-	position: absolute;
-	width: 791px;
-	height: 767px;
-	left: -129px;
-	top: -271px;
+  position: absolute;
+  width: 791px;
+  height: 767px;
+  left: -129px;
+  top: -271px;
 }
 .card-image-wrapper-relative {
   position: relative;
   height: 312px;
   width: 100%;
 }
-.info-card-wrapper{
-	display: flex;
-	gap: 1rem;
-	flex-direction: column;
+.info-card-wrapper {
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
 }
-.info-gap{
-	display: flex;
-	flex-direction: column;
-	gap:2rem
-	
+.info-gap {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
-.goal-wrapper{
-	display: flex;
-	width: 100%;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
+.goal-wrapper {
+  padding-top: 1rem;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+  padding-bottom: 2rem;
 }
-.goal-number{
-	display: flex;
+.goal-number {
+  display: flex;
 }
-.number-text{
-	font-family: Montserrat;
-font-size: 60px;
-font-weight: 400;
-line-height: 72px;
-letter-spacing: -0.02em;
-text-align: center;
+.number-text {
+  font-size: 60px;
+  font-weight: 400;
+  line-height: 72px;
+  letter-spacing: -0.02em;
+  text-align: center;
+}
 
+.number-text-wrapper {
+  position: relative;
+}
+.number-text-right {
+  padding-right: 1rem;
+}
+.number-text-right-center {
+  padding-right: 1rem;
+  padding-left: 1rem;
+}
+.number-text-left {
+  padding-left: 1rem;
+}
+.number-text-right::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  height: 65px;
+  width: 1px;
+  background-color: #73a6b1;
+}
+.number-text-left:last-of-type::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  height: 65px;
+  width: 2px;
+  background-color: #73a6b1;
+}
+.text-contact-black {
+  color: black;
+  font-size: 60px;
+  font-weight: 400;
+  line-height: 72px;
+  letter-spacing: -0.02em;
+  text-align: center;
+}
+.contact-heading-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.contact-information-block {
+  display: flex;
+  width: 100%;
+}
+.contact-information-wrapper {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  gap: 3rem;
+  padding-left: 2rem;
+}
+.question-contact-paragraph {
+  display: flex;
+  flex-direction: column;
+  max-width: 300px;
+}
+.phone {
+  padding-top: 0.5rem;
+  font-weight: 700;
+}
+.contact-block {
+  display: flex;
+}
+.contact-icon {
+  width: 33px;
+  height: 33px;
+}
+.contact-icon-container {
+  display: inline-flex;
+  gap: 0.5rem;
+}
+.card-section-info-bg {
+  background-color: var(--card-section-info-bg-color);
+}
+.contact-card {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.contact-info-image-card {
+  display: flex;
+  background-color: #ffffff;
+  padding: 60px;
+  border-radius: 10px;
 
 }
-
-.number-text-wrapper{
-	position: relative;
+.contact-form-block {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
-.number-text-right::after{
-	content: '';
-	position: absolute;
-	right:  0;
-	height: 65px;
-	width: 1px;
-	background-color: #73a6b1;
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 580px;
 }
-.number-text-left:last-of-type::before{
-	content: '';
-	position: absolute;
-	left: 0;
-	height: 65px;
-	width: 2px;
-	background-color: #73a6b1;
+.contact-form > input {
+  width: 100%;
+  border: 0;
+  padding: 21px 35px 21px 35px;
+  gap: 10px;
+  border-radius: 61px;  
+  max-width: 470px;
+  box-sizing: border-box;
+  background-color: #F9FADF;
+}
+.form-paragraph {
+  font-size: 27px;
+  font-weight: 400;
+  line-height: 32.4px;
+  text-align: left;
+  width: 470px;
+}
+.submit-button{
+  width: 100%;
 }
