--- a/assets/style.css
+++ b/assets/style.css
@@ -24,7 +24,10 @@
   gap: 2rem;
   align-items: center;
 }
-
+.block{
+  display: flex;
+  flex-direction: column;
+}
 .header-nav-button {
   background-color: var(--main-button-bg-color);
 }
@@ -54,7 +57,6 @@
   gap: 1.5rem;
 }
 .main-block {
-  height: 100vh;
 }
 
 .main-bg-image {
